--- a/assets/index.html
+++ b/assets/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rosie</title>
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="/css/angular-awesome-slider.min.css" rel="stylesheet" />
-    <link href="/css/bootstrap-switch.min.css" rel="stylesheet" />
-    <link href="/css/app.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/angular-awesome-slider.min.css" rel="stylesheet" />
+    <link href="css/bootstrap-switch.min.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
 
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/angular.min.js"></script>
-    <script src="/js/angular-bootstrap-switch.min.js"></script>
-    <script src="/js/angular-ui-router.min.js"></script>
-    <script src="/js/bootstrap-switch.min.js"></script>
-    <script src="/js/underscore-min.js"></script>
-    <script src="/js/restangular.min.js"></script>
-    <script src="/js/angular-awesome-slider.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/angular-bootstrap-switch.min.js"></script>
+    <script src="js/angular-ui-router.min.js"></script>
+    <script src="js/bootstrap-switch.min.js"></script>
+    <script src="js/underscore-min.js"></script>
+    <script src="js/restangular.min.js"></script>
+    <script src="js/angular-awesome-slider.min.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <div ui-view="header"></div>
