--- a/assets/ng/shared/_header.tmpl.html
+++ b/assets/ng/shared/_header.tmpl.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Rosie</a>
+      <a ui-sref="app.lights" class="navbar-brand">Rosie</a>
     </div>
 
     <div class="navbar-header collapse navbar-collapse" role="navigation">
