Add link to tasks

--- a/assets/ng/shared/_header.tmpl.html
+++ b/assets/ng/shared/_header.tmpl.html
@@ -14,6 +14,7 @@
       <ul class="nav navbar-nav">
         <li><a ui-sref="app.lights">Lights</a></li>
         <li><a ui-sref="app.remotes">Remotes</a></li>
+        <li><a ui-sref="app.tasks">Tasks</a></li>
       </ul>
     </div>
   </div>
