--- a/assets/ng/header/_header.tmpl.html
+++ b/assets/ng/header/_header.tmpl.html
@@ -1,7 +1,7 @@
 <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" id="top" role="banner">
   <div class="container">
     <div class="navbar-header">
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+      <button class="navbar-toggle" type="button" ng-click="navToggle()">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -10,11 +10,11 @@
       <a ui-sref="app.lights" class="navbar-brand">Rosie</a>
     </div>
 
-    <div class="navbar-header collapse navbar-collapse" role="navigation">
+    <div class="navbar-header collapse navbar-collapse" collapse="navCollapsed">
       <ul class="nav navbar-nav">
-        <li><a ui-sref="app.lights">Lights</a></li>
-        <li><a ui-sref="app.remotes">Remotes</a></li>
-        <li><a ui-sref="app.tasks">Tasks</a></li>
+        <li><a ui-sref="app.lights" ng-click="navCollapse()">Lights</a></li>
+        <li><a ui-sref="app.remotes" ng-click="navCollapse()">Remotes</a></li>
+        <li><a ui-sref="app.tasks" ng-click="navCollapse()">Tasks</a></li>
       </ul>
     </div>
   </div>
