Added ui bootstrap and wanted readable angular stack trackes

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,8 +13,8 @@
     <link href="css/app.css" rel="stylesheet" />
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/angular.min.js"></script>
+    <script src="js/angular.js"></script>
+    <script src="js/ui-bootstrap-tpls.min.js"></script>
     <script src="js/angular-bootstrap-switch.min.js"></script>
     <script src="js/angular-ui-router.min.js"></script>
     <script src="js/bootstrap-switch.min.js"></script>
