--- a/assets/index.html
+++ b/assets/index.html
@@ -14,6 +14,8 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/angular.js"></script>
+    <script src="js/angular-sanitize.min.js"></script>
+    <script src="js/angular-translate.min.js"></script>
     <script src="js/ui-bootstrap-tpls.min.js"></script>
     <script src="js/angular-bootstrap-switch.min.js"></script>
     <script src="js/angular-ui-router.min.js"></script>
