--- a/assets/ng/tasks/index.tmpl.html
+++ b/assets/ng/tasks/index.tmpl.html
@@ -2,7 +2,20 @@
   <li>Tasks</li>
 </ol>
 <div class="container-fluid">
-  <div ng-repeat="task in taskList" class="row row-striped row-padding-3px">
-    <button ng-click="sendTask(task)">{{ task.type }}</button>
+  <div class="row">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Task</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="task in taskList">
+          <td>{{ "tasks." + task.type | translate }}</td>
+          <td><button ng-click="sendTask(task)">Queue</button></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
