Use ui.bootstrap for dropdowns

--- a/assets/ng/remotes/remote_receiver.tmpl.html
+++ b/assets/ng/remotes/remote_receiver.tmpl.html
@@ -14,8 +14,8 @@
         Volume <i class="glyphicon glyphicon-chevron-down"></i>
       </button>
     </div>
-    <div class="btn-group btn-group-lg text-center col-xs-4 col-xs-offset-4" role="group">
-      <button type="button" class="btn btn-default dropdown-toggle col-xs-12" data-toggle="dropdown">
+    <div class="btn-group btn-group-lg text-center col-xs-4 col-xs-offset-4" role="group" dropdown>
+      <button type="button" class="btn btn-default dropdown-toggle col-xs-12" dropdown-toggle>
         Input <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu">
