--- a/assets/ng/remotes/remote_tv.tmpl.html
+++ b/assets/ng/remotes/remote_tv.tmpl.html
@@ -89,8 +89,8 @@
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
       <button type="button" class="btn btn-default btn-lg col-xs-6" role="button" ng-click="sendCmd('menu')">Menu</button>
-      <div class="btn-group col-xs-6" role="group">
-        <button type="button" class="btn btn-default btn-lg dropdown-toggle col-xs-12" data-toggle="dropdown">
+      <div class="btn-group col-xs-6" role="group" dropdown>
+        <button type="button" class="btn btn-default btn-lg dropdown-toggle col-xs-12" dropdown-toggle>
           Input <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu">
