--- a/assets/index.html
+++ b/assets/index.html
@@ -13,7 +13,9 @@
     <link href="css/app.css" rel="stylesheet" />
 
     <script src="js/jquery.min.js"></script>
+    <script src="js/moment.min.js"></script>
     <script src="js/angular.js"></script>
+    <script src="js/angular-moment.min.js"></script>
     <script src="js/angular-sanitize.min.js"></script>
     <script src="js/angular-translate.min.js"></script>
     <script src="js/ui-bootstrap-tpls.min.js"></script>
