Add datetime picker asset

--- a/assets/index.html
+++ b/assets/index.html
@@ -19,6 +19,7 @@
     <script src="js/angular-sanitize.min.js"></script>
     <script src="js/angular-translate.min.js"></script>
     <script src="js/ui-bootstrap-tpls.min.js"></script>
+    <script src="js/datetime-picker.min.js"></script>
     <script src="js/angular-bootstrap-switch.min.js"></script>
     <script src="js/angular-ui-router.min.js"></script>
     <script src="js/bootstrap-switch.min.js"></script>
