Load js data assets vs restangular

--- a/assets/index.html
+++ b/assets/index.html
@@ -18,6 +18,9 @@
     <script src="js/angular-moment.min.js"></script>
     <script src="js/angular-sanitize.min.js"></script>
     <script src="js/angular-translate.min.js"></script>
+    <script src="js/js-data.min.js"></script>
+    <script src="js/js-data-angular.min.js"></script>
+    <script src="js/js-data-http.min.js"></script>
     <script src="js/ui-bootstrap-tpls.min.js"></script>
     <script src="js/datetime-picker.min.js"></script>
     <script src="js/angular-bootstrap-switch.min.js"></script>
