Use strong vs b

--- a/assets/ng/lights/_light_row.tmpl.html
+++ b/assets/ng/lights/_light_row.tmpl.html
@@ -1,5 +1,5 @@
 <div class="col-md-4">
-  <div><b>{{ light.loc }}: {{light.name}}</b></div>
+  <div><strong>{{ light.loc }}: {{light.name}}</strong></div>
   <div ng-if="light.classes['37']" ng-init="blah = 0">
     <input bs-switch type="checkbox" ng-change="light.put()" ng-model="light.classes['37']['0'].value" switch-size="small" />
   </div>
