--- a/assets/ng/remotes/index.tmpl.html
+++ b/assets/ng/remotes/index.tmpl.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 btn-group-vertical btn-group-lg text-center" role="group">
-      <a ng-repeat="remote in remoteList" ui-sref="app.remote.{{remote.key}}" class="btn btn-default">{{remote.title}}</a>
+      <a ng-repeat="remote in remoteList" ui-sref="app.remote.{{remote.id}}" class="btn btn-default">{{remote.title}}</a>
     </div>
   </div>
 </div>
