Add color to the button

--- a/assets/ng/tasks/form.tmpl.html
+++ b/assets/ng/tasks/form.tmpl.html
@@ -4,7 +4,7 @@
 <div class="modal-body container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <label>Run At ({{ task.promote_at }})</label>
+      <label>Run At</label>
       <div class="input-group">
         <input format-date datetime-picker="yyyy-MM-dd HH:mm" is-open="promote_at_open" ng-model="task.promote_at" timepicker-options="timeOptions" type="text" class="form-control" />
         <span class="input-group-addon" ng-click="openCalendar($event)">
