Add color to the button

--- a/assets/ng/tasks/index.tmpl.html
+++ b/assets/ng/tasks/index.tmpl.html
@@ -13,7 +13,7 @@
       </thead>
       <tbody>
         <div class="btn-group">
-          <button ng-click="addTask()" class="btn btn-default">Add Task</button>
+          <button ng-click="addTask()" class="btn btn-success">Add Task</button>
         </div>
         <tr ng-repeat="task in taskList">
           <td>{{ "tasks." + task.type | translate }}</td>
