--- a/assets/ng/tasks/index.tmpl.html
+++ b/assets/ng/tasks/index.tmpl.html
@@ -29,7 +29,7 @@
                 <span class="sr-only">Toggle Dropdown</span>
               </button>
               <ul class="dropdown-menu" role="menu">
-                <li class="menuitem"><a href="#" ng-click="deleteTask(task)">Delete</a></li>
+                <li class="menuitem"><a href="#" ng-click="deleteTask(task); $event.preventDefault()">Delete</a></li>
               </ul>
             </div>
           </td>
