--- a/assets/ng/tasks/index.tmpl.html
+++ b/assets/ng/tasks/index.tmpl.html
@@ -18,8 +18,8 @@
         <tr ng-repeat="task in taskList">
           <td>{{ "tasks." + task.type | translate }}</td>
           <td>
-            {{ task.promote_at | date: "yyyy-MM-dd HH:mm" }}
-            <span class="text-muted">(Runs <span am-time-ago="task.promote_at"></span>)</span>
+            <div>{{ task.promote_at | date: "yyyy-MM-dd HH:mm" }}</div>
+            <div class="text-muted">Runs <span am-time-ago="task.promote_at"></span></div>
           </td>
           <td>
             <div class="btn-group btn-group-sm" dropdown>
