--- a/assets/ng/tasks/index.tmpl.html
+++ b/assets/ng/tasks/index.tmpl.html
@@ -3,6 +3,11 @@
 </ol>
 <div class="container-fluid">
   <div class="row">
+    <div class="btn-group">
+      <button ng-click="addTask()" class="btn btn-success">Add Task</button>
+    </div>
+  </div>
+  <div class="row">
     <table class="table table-striped">
       <thead>
         <tr>
@@ -12,9 +17,6 @@
         </tr>
       </thead>
       <tbody>
-        <div class="btn-group">
-          <button ng-click="addTask()" class="btn btn-success">Add Task</button>
-        </div>
         <tr ng-repeat="task in taskList">
           <td>{{ "tasks." + task.type | translate }}</td>
           <td>
